--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <div class="main-container">
     <header>
         <h1> JavaScript Exercises</h1>
-    </header> 
+    </header>
+    
+    <div class="first-section">
+        <p>Hej världen</p>
+        <button id="btn1" type="button">Click me</button>
+    </div>
 </div>
 
 </body>
