--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     
     <div class="first-section">
-        <p>Hej världen</p>
+        <p id="p1">Hej världen</p>
         <button id="btn1" type="button">Click me</button>
     </div>
 </div>
