sixth commit - second exercise

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <p id="p1">Hej världen</p>
         <button id="btn1" type="button">Click me</button>
     </div>
+
+    <div class="second-section">
+        <button id="btn2" type="button">Click me to change background colour</button>
+    </div>
 </div>
 
 <script src="script.js"></script>
