--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <div class="second-section">
         <button id="btn2" type="button">Click me to change background colour</button>
     </div>
+
+    <div class="third-section">
+      <input type="text" id="textfield">
+    </div>
 </div>
 
 <script src="script.js"></script>
