--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div class="third-section">
       <input type="text" id="textfield">
+      <button id="btn3" type="submit">Submit</button>
     </div>
 </div>
 
