--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <button id="btn3" type="submit">Submit</button>
       <p id="p2"></p>
     </div>
+
+    <div class="fourth-section">
+      <button id="btn4" type="button">Change theme</button>
+    </div>
 </div>
 
 <script src="script.js"></script>
