--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <div class="fourth-section">
       <button id="btn4" type="button">Change theme</button>
     </div>
+
+    <div class="fifth-section">
+      <button id="btn5" type="button">Add square</button>
+      <button id="btn6" type="button">Clear</button>
+      <div id="container"></div>
+    </div>
 </div>
 
 <script src="script.js"></script>
